--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.4.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@shopify/react-native-skia": "^0.1.189",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.7.2",
     "react-native-reanimated": "^3.1.0",
-    "react-native-safe-area-context": "^4.5.2",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.20.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-wheel-color-picker": "^1.2.0",
     "rn-perfect-sketch-canvas": "^0.3.0"
   },
   "devDependencies": {
